automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     h3{
       font-size: 28px;
       color: #868e96;
+      text-decoration: underline;
+      font-family: verdana;
     }
     </style>
   </head>
