--- a/index.html
+++ b/index.html
@@ -2,6 +2,20 @@
 <html>
   <head>
     <title>IceBreakers</title>
+    <style>
+    h1{
+      font-size: 60px;
+      font-weight: 300px;
+      font-family: Helvetica, Arial, sans-serif;
+    }
+
+    h3{
+      font-size: 28px;
+      color: #868e96;
+      text-decoration: underline;
+      font-family: verdana;
+    }
+    </style>
   </head>
   <body>
     <header>
